Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjIntegerRetundefined.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        Integer two
        two:SetValue(66)
        Yoda<Integer, Integer, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
