Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjIntegerRetnumberFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        Integer two
        two:SetValue(66)
        Yoda<Integer, Integer, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
